# pulp-view-embed

./: .gitignore  CMakeLists.txt  DISTRIBUTING.md  README.md  pulp-package.json
.github/workflows/: ci.yml
examples/linux-x11-smoke/: smoke.cpp
examples/macos-nsview-smoke/: bundle_render.mm  design_render.mm  smoke.mm
fixtures/: README.md
fixtures/figma-vst-style/: scene.pulp.json
fixtures/figma-vst-style-faithful/: design.ir.json
fixtures/figma-vst-style/bundle/: ui.js
include/: pulp_view_embed.h  pulp_view_embed.hpp
src/: embed_processors.hpp  pulp_view_embed.cpp  pulp_view_embed.exp  pulp_view_embed.map
tools/: package-sdk.sh  pulp_embed_validate.cpp
